# bangalore-transit-twin

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  wget-log
.github/workflows/: ci.yml
data_engineering/airflow/dags/: gtfs_static_ingestion.py
data_engineering/dbt/: dbt_project.yml  profiles.yml
data_engineering/dbt/models/: sources.yml
data_engineering/dbt/models/gold/: gold_route_performance_daily.sql  route_performance_daily.sql
data_engineering/dbt/models/silver/: schema.yml  silver_vehicle_positions.sql  stop_time_actuals.sql
data_engineering/ingestion/gtfs_static/: parser.py
docs/: GCP_ONBOARDING.md
infrastructure/docker/: Dockerfile.api  Dockerfile.flink
mlops_pipeline/features/: feature_engineering.py
mlops_pipeline/training/: train_eta_model.py
scripts/: init_postgres.sql  query_bronze.py
serving_layer/api/: main.py
serving_layer/cache/: kafka_to_redis.py
stream_processing/flink/jobs/: delay_detection.py  iceberg_sink.py
stream_processing/kafka/producers/: gtfs_rt_producer.py
tests/unit/: test_serving_and_parser.py
unity_client/Scripts/DataBridge/: TransitDataBridge.cs
unity_client/Scripts/Vehicles/: VehicleController.cs
