[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bangalore-transit-twin"
version = "0.1.0"
description = "Real-time 3D Smart City Digital Twin for Bangalore Transit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # ── Data ingestion ──────────────────────────────
    "gtfs-realtime-bindings>=1.0.0",
    "protobuf>=4.25",
    "requests>=2.31",
    "httpx>=0.27",
    "aiohttp>=3.9",

    # ── Kafka ───────────────────────────────────────
    "confluent-kafka>=2.4",
    "fastavro>=1.9",

    # ── Flink (PyFlink) ─────────────────────────────
    "apache-flink==1.19.0",

    # ── Spark / Iceberg ─────────────────────────────
    "pyspark==3.5.1",
    "pyiceberg[gcs,pyarrow,duckdb]>=0.7",

    # ── dbt ─────────────────────────────────────────
    "dbt-core>=1.8",
    "dbt-spark[PyHive]>=1.8",

    # ── Airflow ─────────────────────────────────────
    "apache-airflow==2.9.1",
    "apache-airflow-providers-apache-kafka>=1.3",
    "apache-airflow-providers-google>=10.19",

    # ── ML / Training ────────────────────────────────
    "torch>=2.3",
    "ray[train,tune,serve]>=2.20",
    "mlflow>=2.13",
    "dvc[gcs]>=3.50",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",

    # ── Geospatial ───────────────────────────────────
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "folium>=0.16",

    # ── Serving ──────────────────────────────────────
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # ── LLMOps ───────────────────────────────────────
    "haystack-ai>=2.2",
    "milvus-haystack>=0.3",
    "vllm>=0.5",

    # ── Observability ────────────────────────────────
    "opentelemetry-sdk>=1.24",
    "prometheus-client>=0.20",
    "structlog>=24",

    # ── Config / Utils ───────────────────────────────
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13",
    "tenacity>=8.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "great-expectations>=0.18",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "faker>=25",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_engineering*", "stream_processing*", "mlops_pipeline*", "serving_layer*", "agentic_llm*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"